--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
                 <span class="fa-solid fa-bars" id="menu"></span>
             </div>
             <div class="nav-item log-sign-in" id="log-sign-in">
-                <button class="login" id="login" type="button" onclick="window.open('html files/login.html', '_self')">Login</button>
-                <button class="reg" id="reg" type="button" onclick="window.open('html files/RegistrationForm.html', '_self')">Register</button>
+                <button class="login" id="login" type="button" onclick="window.open('src/login.html', '_self')">Login</button>
+                <button class="reg" id="reg" type="button" onclick="window.open('src/RegistrationForm.html', '_self')">Register</button>
             </div>
             <div class="nav-links-container" id="nav-links-container">
                 <a class="nav-item nav-links active-nav-link" id="nav-home" href="index.html" target="_self">Home</a>
-                <a class="nav-item nav-links" id="nav-profile" href="html files/profile.html" target="_self">Profile</a>
-                <a class="nav-item nav-links" id="nav-help" href="html files/Help.html" target="_self">Help</a>
-                <a class="nav-item nav-links" id="nav-about" href="html files/AboutUs.html" target="_self">About</a>
+                <a class="nav-item nav-links" id="nav-profile" href="src/profile.html" target="_self">Profile</a>
+                <a class="nav-item nav-links" id="nav-help" href="src/Help.html" target="_self">Help</a>
+                <a class="nav-item nav-links" id="nav-about" href="src/AboutUs.html" target="_self">About</a>
             </div>
         </div>
 
@@ -232,15 +232,15 @@
                 <div class="link-container">
                     <a href="index.html" id="quick-home" onclick="location.reload()">
                         Home</a>
-                    <a href="html files/profile.html" id="quick-profile" target="_self">
+                    <a href="src/profile.html" id="quick-profile" target="_self">
                         Profile</a>
-                    <a href="html files/AboutUs.html" id="quick-about" target="_self">
+                    <a href="src/AboutUs.html" id="quick-about" target="_self">
                         About Us</a>
-                    <a href="html files/Help.html" id="quick-help" target="_self">
+                    <a href="src/Help.html" id="quick-help" target="_self">
                         Help</a>
-                    <a href="html files/Policy.html" id="quick-Policy" target="_self">
+                    <a href="src/Policy.html" id="quick-Policy" target="_self">
                         Policy</a>
-                    <a href="html files/TermCondition.html" id="quick-TandC" target="_self">
+                    <a href="src/TermCondition.html" id="quick-TandC" target="_self">
                         Term & Condition</a>
                 </div>
             </div>
